--- a/course-02/project/image-filter-starter-code/package.json
+++ b/course-02/project/image-filter-starter-code/package.json
@@ -19,6 +19,12 @@
     "url": "https://github.com/grutt/udacity-c2-image-filter/issues"
   },
   "homepage": "https://github.com/grutt/udacity-c2-image-filter#readme",
+  "dependencies": {
+    "@types/jsonwebtoken": "^8.3.2",
+    "jsonwebtoken": "^8.5.1",
+    "express": "^4.17.1",
+    "jimp": "^0.6.4"
+  },
   "devDependencies": {
     "@types/bluebird": "^3.5.27",
     "@types/express": "^4.17.0",
@@ -26,9 +32,5 @@
     "ts-node-dev": "^1.0.0-pre.40",
     "tslint": "^5.18.0",
     "typescript": "^3.5.3"
-  },
-  "dependencies": {
-    "express": "^4.17.1",
-    "jimp": "^0.6.4"
   }
 }
