--- a/course-03/exercises/udacity-c3-deployment/k8s/env-secret.yaml
+++ b/course-03/exercises/udacity-c3-deployment/k8s/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRESS_USERNAME: dWRhZ3JhbWFiaGlkZXY=
-  POSTGRESS_PASSWORD: dWRhZ3JhbWFiaGlkZXY=
+  POSTGRESS_USERNAME: <base64 encoded username>
+  POSTGRESS_PASSWORD: <base64 encoded password>
