fixed issues with xray permissions

--- a/course-04/exercises/lesson-6/starter-code/serverless.yml
+++ b/course-04/exercises/lesson-6/starter-code/serverless.yml
@@ -21,9 +21,9 @@ provider:
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-2'}
 
-  # tracing:
-  #   lambda: true
-  #   apiGateway: true
+  tracing:
+    lambda: true
+    apiGateway: true
 
   environment:
     GROUPS_TABLE: Groups-${self:provider.stage}
@@ -151,6 +151,12 @@ functions:
           path: groups/{groupId}/images
           cors: true
     iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - xray:PutTraceSegments
+          - xray:PutTelemetryRecords
+        Resource:
+          - '*'
       - Effect: Allow
         Action:
           - dynamodb:Query
