--- a/course-04/project/c4-final-project-starter-code/backend/package.json
+++ b/course-04/project/c4-final-project-starter-code/backend/package.json
@@ -24,6 +24,8 @@
     "serverless-plugin-canary-deployments": "^0.4.7",
     "serverless-reqvalidator-plugin": "^1.0.3",
     "serverless-webpack": "^5.3.1",
+    "serverless-dynamodb-local": "^0.2.38",
+    "serverless-offline": "^4.10.6",
     "ts-loader": "^5.4.5",
     "typescript": "^3.5.3",
     "webpack": "^4.35.3"
